syntax = "proto3";

package hashicorp.consul.multicluster.v1alpha1;

import "pbresource/annotations.proto";
import "pbmulticluster/v1alpha1/exported_services_consumer.proto";

message PartitionExportedServices {
  option (hashicorp.consul.resource.spec) = {scope: SCOPE_PARTITION};

  repeated ExportedServicesConsumer consumers = 1;
}
